--- a/contact.html
+++ b/contact.html
@@ -153,10 +153,11 @@
 	
 	
 		/* responsive stuff */
-		@media screen and (max-width: 650px) {
+		@media screen and (max-width: 830px) {
 		html {
 		}
 		body {
+			font-size: 4vw;
 			margin: 35px 10px;
 			overflow-x: hidden;
 			background-position: top center;
@@ -164,14 +165,8 @@
 		h1 {
 			font-size: 15vw;
 		}
-		h2 {
-			font-size: 6vw;
-		}
-		h3 {
-			font-size: 5vw;
-		}
 		h4, h5 {
-			font-size: 3vw;
+			font-size: 3.5vw;
 		}
 		ul {
 			width: 50%;
@@ -245,7 +240,7 @@
 	</div></div>
 	<br>
 	<ul style="float:left;">
-		<li style="float:left;margin-top:-25px;"><a href="index.html"><img src="ZARA HAPIZ LOGO BLACK.png" alt="ZH" style="width:90px;height:90px;"></a></li>
+		<li style="float:left;margin-top:-25px;"><a href="index.html"><img src="ZARA HAPIZ LOGO BLACK.png" alt="ZH" style="width:120px;"></a></li>
 	</ul><ul style="float:right;margin-top:5px;font-size:1.1em;"><div class="topnav" id="myTopnav">
 		<a href="index.html">home</a>
   		<a href="art gallery.html">art gallery</a>
