--- a/art gallery.html
+++ b/art gallery.html
@@ -115,7 +115,7 @@
 		border-bottom: 1px solid #08131C;
 		overflow-x: hidden;
 		overflow-y: hidden;
-		height: 38px;
+		height: 33px;
 		font-style: italic;	
 		white-space: nowrap;
 	}
@@ -232,6 +232,9 @@
 		i {
 			width: "40vw";
 		}
+		.ribbon {
+			height: 5vw;
+		}
 		.stickers {
 			display: none;
 		}
@@ -329,7 +332,7 @@
 	</div></div>
 	<br>
 	<ul style="float:left;">
-		<li style="float:left;margin-top:-25px;"><a href="index.html"><img src="ZARA HAPIZ LOGO BLACK.png" alt="ZH" style="width:120px;"></a></li>
+		<li style="float:left;margin-top:-25px;"><a href="index.html"><img src="ZARA HAPIZ LOGO BLACK.png" alt="ZH" style="width:100px;"></a></li>
 	</ul><ul style="float:right;margin-top:5px;font-size:1.1em;"><div class="topnav" id="myTopnav">
 		<a href="index.html">home</a>
   		<a class="active" href="art gallery.html">art gallery</a>
