--- a/contact.html
+++ b/contact.html
@@ -101,7 +101,7 @@
 		border-bottom: 1px solid #08131C;
 		overflow-x: hidden;
 		overflow-y: hidden;
-		height: 38px;
+		height: 33px;
 		font-style: italic;	
 		white-space: nowrap;
 	}
@@ -217,6 +217,9 @@
 		i {
 			width: "40vw";
 		}
+		.ribbon {
+			height: 5vw;
+		}
 		h4 img {
 			width: 100% !important;
 			}
@@ -240,7 +243,7 @@
 	</div></div>
 	<br>
 	<ul style="float:left;">
-		<li style="float:left;margin-top:-25px;"><a href="index.html"><img src="ZARA HAPIZ LOGO BLACK.png" alt="ZH" style="width:120px;"></a></li>
+		<li style="float:left;margin-top:-25px;"><a href="index.html"><img src="ZARA HAPIZ LOGO BLACK.png" alt="ZH" style="width:100px;"></a></li>
 	</ul><ul style="float:right;margin-top:5px;font-size:1.1em;"><div class="topnav" id="myTopnav">
 		<a href="index.html">home</a>
   		<a href="art gallery.html">art gallery</a>
