--- a/store.html
+++ b/store.html
@@ -303,15 +303,16 @@
     }
     #lightbox img {
       position: absolute;
-      top: 12%;
-      left: 32%;
+      top: 50%;
+		left: 50%;
+	  transform: translate(-50%, -50%);
       max-width: 80%;
       max-height: 80%;
 		animation: fade-in 1.5s ease-out;
 		transition: transform 0.5s;
 	}
-	#lightbox img:hover {
-		transform: rotate(7deg);
+	/*#lightbox img:hover {
+		transform: rotate(7deg);*/
 	}
     #lightbox .close {
 	  	position: absolute;
