--- a/store.html
+++ b/store.html
@@ -370,10 +370,6 @@
 	
 	
 	<!--LIGHTBOX-->
-	<div id="lightbox">
-    <span class="close">×</span>
-    <img src="RECEIPT.png" alt="">
-  	</div>
 		
 
 		<br><br><br><h1>posters (100% free!)</h1><br>
@@ -597,6 +593,10 @@
 			</div></div>
 	
 		<h1><center>the end!</center></h1><br><br><br>
+		<div id="lightbox">
+		<span class="close">×</span>
+		<img src="RECEIPT!.png" alt="" style="transform:rotate(10deg);position:relative;bottom:130px;">
+		</div>
 	
 	<!--
 		<h2>Python codes</h2>
@@ -616,7 +616,7 @@
 	
 	
 	<!--FOOTER STUFF-->
-	<footer>
+	<footer style="margin-top:-150px;">
 		<a href="https://www.instagram.com/zaramysh/" target="_blank"><img src="instagram.png" style="width:30px;" alt="Instagram"></a>
 		<a href="https://www.tiktok.com/@flow7rboy" target="_blank"><img src="tik-tok.png" style="width:30px;" alt="TikTok"></a>
 		<p>© Zara Hapiz 2024</p>
