--- a/gallery.html
+++ b/gallery.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="utf-8">
 <title>ART GALLERY - Zara Hapiz</title>
-<link rel="icon" type="image/x-icon" href="ZARA HAPIZ LOGO SMALL.png">
+<link rel="icon" type="image/x-icon" href="ZARA HAPIZ LOGO PINK ICON.png.png">
 <link rel="stylesheet" href="https://use.typekit.net/oag6cqw.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -207,10 +207,6 @@
 		}
 		::-webkit-scrollbar {
 		width: 0px;
-		}
-		.topnav { 
-			background-color: var(--pink);
-			border-radius: 20px;
 		}
 		.topnav a {display: none;}
   		.topnav a.icon {
