--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="utf-8">
 <title>HOME - Zara Hapiz</title>
-<link rel="icon" type="image/x-icon" href="ZARA HAPIZ LOGO PINK ICON.png.png">
+<link rel="icon" type="image/x-icon" href="ZARA HAPIZ LOGO PINK ICON.png">
 <link rel="stylesheet" href="https://use.typekit.net/oag6cqw.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -157,7 +157,7 @@
 		display: flex;
 	}
 	.spin {
-		animation: spin 1s linear infinite;
+		animation: spin 0.5s linear infinite;
   		animation-play-state: paused;
   		animation-delay: calc(var(--scroll) * -1s);
 	}
