--- a/gallery.html
+++ b/gallery.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="utf-8">
 <title>ART GALLERY - Zara Hapiz</title>
-<link rel="icon" type="image/x-icon" href="ZARA HAPIZ LOGO PINK ICON.png.png">
+<link rel="icon" type="image/x-icon" href="ZARA HAPIZ LOGO PINK ICON.png">
 <link rel="stylesheet" href="https://use.typekit.net/oag6cqw.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
