--- a/index.html
+++ b/index.html
@@ -207,6 +207,9 @@
 			margin-bottom: 10vw;
 			width: 100%;
 		}
+		li {
+			width: 1px;
+		}
 		::-webkit-scrollbar {
 		width: 0px;
 		}
@@ -237,6 +240,9 @@
 		.ribbon {
 			height: 5vw;
 		}
+			.zara {
+				width:50vw;
+			}
 	}
 	/*INDEX STUFF*/
 	
@@ -329,17 +335,17 @@
 	</ul>
 	<div class="row" style="margin-top: 150px;">
 		<div class="column" style="flex:30%;">
-			<div class="zaraslide"><img src="zaraaaa.png" alt=""></div>
+			<div class="zaraslide"><img class="zara" src="zaraaaa.png" alt=""></div>
 		</div>
 		<div class="column">
 			<h1>ZARA <i style="color:#F17F96;">HAPIZ</i></h1>
-			<h3>Hey readers! I'm <i style="color:#3D84E1;">Zara Hapiz</i> and I'm a graphic designer + aspiring computer/software engineer + all around <a href="art gallery.html" style="color:var(--black);">artist</a>. I'm a 17-year-old high school student. I'm a huge fan of hip-hop and 2000's R&amp;B music. I've got a knack for basketball and my jersey number is #1. My favourite font is Neue Haas Grotesk (ironically enough, it isn't being used in this website). Hmm.. what else? I'm a sucker for rom-coms.
+			<h3>Hey readers! I'm <i style="color:#3D84E1;">Zara Hapiz</i> and I'm a graphic designer + aspiring computer/software engineer + all around <a href="art gallery.html" style="color:var(--black);">artist</a>. I'm a 17-year-old high school student. I'm a huge fan of hip-hop and 2000's R&amp;B music. I've got a knack for basketball and skateboarding. My favourite fonts are Neue Haas Grotesk and Futura (ironically enough, they aren't being used in this website). Hmm.. what else? I'm a sucker for rom-coms. My favourite movies are Titanic and To All The Boys.
 			<p>Anyway, if you couldn't already tell, I programmed this website myself. Its main purpose is to obviously showcase my coding abilities, but besides that this also serves as a portfolio for my graphic design (check out the <a href="store.html" style="color:var(--black);">store</a>!). For students or curious people, feel free to click <i style="color:#3D84E1;">Ctrl+U</i>.</p></h3>
 			<img src="ZARA HAPIZ LOGO ICON.png" style="width:120px;" alt="" class="spin">
 		</div>
 	</div>
 	<br>
-	<img src="artwork/home tcd.png" alt="" style="width:100vw;margin-left:-35px;">
+	<img src="artwork/home diet pepsi.png" alt="" style="width:100vw;margin-left:-35px;">
 	<br><br><h1 class="titleslide">logofolio</h1><br><br>
 	<img src="ZARA HAPIZ LOGO PINK ICON.png" alt="" style="width:100px;z-index:0;position:fixed">
 	<div class="carousel">
@@ -365,6 +371,7 @@
 		<img src="logofolio/zara hapiz logo.png" alt="">
 		<img src="logofolio/zara hapiz logo smol.png" alt="">
 	</div><br><br><br>
+	<img src="artwork/home tcd.png" alt="" style="width:100vw;margin-left:-35px;">
 	
 	<h1>work with me!</h1>
 	<h3>Contact me at @zaramysh on Instagram or email me at zara.hapiz@gmail.com for a chat.
