--- a/gallery.html
+++ b/gallery.html
@@ -347,6 +347,14 @@
 	
 	
 	<div class="gallery">
+	<img id="img9" src="artwork/jack and rose.jpg" width="300px" height="300px" alt="Titanic (1997) - Jack Dawson & Rose DeWitt Bukater">
+	</div>
+	
+	<div class="gallery">
+	<img id="img8" src="artwork/lilies.jpg" width="300px" height="300px" alt="Lilies">
+	</div>
+	
+	<div class="gallery">
 		<div class="title">Jack Harlow</div>
 	<img id="img2023-10" src="artwork/jack harlow.png" width="300px" height="300px" alt="Jack Harlow">
 	<div class="container">8/8/23<i><br>Graphite</i></div></div>
@@ -393,9 +401,21 @@
 	<div class="container">5/2/23<br><i>Graphite</i></div></div>
 	
 	<div class="gallery">
+	<img id="img6" src="artwork/chrissy.jpg" width="300px" height="300px" alt="Chrissy Cunningham">
+	</div>
+	
+	<div class="gallery">
+	<img id="img7" src="artwork/beatrice.jpg" width="300px" height="300px" alt="Beatrice">
+	</div>
+	
+	<div class="gallery">
 		<div class="title">Clairo</div>
 	<img id="img2023-1" src="artwork/clairo-1.png" width="300px" height="300px" alt="Clairo">
 	<div class="container">3/2/23<br><i>Graphite</i></div></div>
+	
+	<div class="gallery">
+	<img id="img2" src="artwork/apple.jpg" width="300px" height="300px" alt="Apple">
+	</div>
 	
 	<div class="gallery">
 		<div class="title">Pear</div>
@@ -418,6 +438,18 @@
 	<div class="container">30/11/21<br><i>Digital</i></div></div>
 	
 	<div class="gallery">
+	<img id="img4" src="artwork/pastels.jpg" width="300px" height="300px" alt="Oil Pastels">
+	</div>
+	
+	<div class="gallery">
+	<img id="img3" src="artwork/claire.jpg" width="300px" height="300px" alt="Colourful..">
+	</div>
+	
+	<div class="gallery">
+	<img id="img5" src="artwork/rasuah.jpg" width="300px" height="300px" alt="Corruption">
+	</div>
+	
+	<div class="gallery">
 		<div class="title">Promises</div>
 	<img id="img2021-3" src="artwork/promises-1.png" width="300px" height="300px" alt="Promises">
 	<div class="container">7/10/21<br><i>Digital</i></div></div>
@@ -433,6 +465,10 @@
 		<div class="title">Manta Ray</div>
 	<img id="img2021-1" src="artwork/manta ray-1.png" width="300px" height="300px" alt="Manta Ray (for Suraya)">
 	<div class="container">22/5/21<br><i>Digital</i></div></div><br>
+	
+	<div class="gallery">
+	<img id="img1" src="artwork/woman.jpg" width="300px" height="300px" alt="They Smelt of Roses">
+	</div>
 	
 	<h1><center>the end!</center></h1><br><br><br>
 	
@@ -471,6 +507,87 @@
 // Get the modal
 var modal = document.getElementById('myModal');
 
+// IMAGE MODAL
+var img = document.getElementById('img9');
+var modalImg = document.getElementById("img01");
+var captionText = document.getElementById("caption");
+img.onclick = function(){
+	  modal.style.display = "block";
+	  modalImg.src = this.src;
+	  captionText.innerHTML = this.alt;
+}
+// IMAGE MODAL
+var img = document.getElementById('img8');
+var modalImg = document.getElementById("img01");
+var captionText = document.getElementById("caption");
+img.onclick = function(){
+	  modal.style.display = "block";
+	  modalImg.src = this.src;
+	  captionText.innerHTML = this.alt;
+}
+// IMAGE MODAL
+var img = document.getElementById('img7');
+var modalImg = document.getElementById("img01");
+var captionText = document.getElementById("caption");
+img.onclick = function(){
+	  modal.style.display = "block";
+	  modalImg.src = this.src;
+	  captionText.innerHTML = this.alt;
+}
+// IMAGE MODAL
+var img = document.getElementById('img6');
+var modalImg = document.getElementById("img01");
+var captionText = document.getElementById("caption");
+img.onclick = function(){
+	  modal.style.display = "block";
+	  modalImg.src = this.src;
+	  captionText.innerHTML = this.alt;
+}
+// IMAGE MODAL
+var img = document.getElementById('img5');
+var modalImg = document.getElementById("img01");
+var captionText = document.getElementById("caption");
+img.onclick = function(){
+	  modal.style.display = "block";
+	  modalImg.src = this.src;
+	  captionText.innerHTML = this.alt;
+}
+// IMAGE MODAL
+var img = document.getElementById('img4');
+var modalImg = document.getElementById("img01");
+var captionText = document.getElementById("caption");
+img.onclick = function(){
+	  modal.style.display = "block";
+	  modalImg.src = this.src;
+	  captionText.innerHTML = this.alt;
+}
+// IMAGE MODAL
+var img = document.getElementById('img3');
+var modalImg = document.getElementById("img01");
+var captionText = document.getElementById("caption");
+img.onclick = function(){
+	  modal.style.display = "block";
+	  modalImg.src = this.src;
+	  captionText.innerHTML = this.alt;
+}
+// IMAGE MODAL
+var img = document.getElementById('img2');
+var modalImg = document.getElementById("img01");
+var captionText = document.getElementById("caption");
+img.onclick = function(){
+	  modal.style.display = "block";
+	  modalImg.src = this.src;
+	  captionText.innerHTML = this.alt;
+}
+// IMAGE MODAL
+var img = document.getElementById('img1');
+var modalImg = document.getElementById("img01");
+var captionText = document.getElementById("caption");
+img.onclick = function(){
+	  modal.style.display = "block";
+	  modalImg.src = this.src;
+	  captionText.innerHTML = this.alt;
+}
 // IMAGE MODAL
 var img = document.getElementById('img2023-10');
 var modalImg = document.getElementById("img01");
